compiladores/T2/tests/test_non_assoc_in_if_w.in
main: function integer () = {

if a >  5 > b // error
  return a;

